Bug 168089 - External data links confirmation dialog shows URI encoded URL with %20
Summary: External data links confirmation dialog shows URI encoded URL with %20
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-24 09:22 UTC by Andreas Heinisch
Modified: 2025-09-01 11:23 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (84.46 KB, image/png)
2025-08-24 21:47 UTC, m_a_riosv
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Heinisch 2025-08-24 09:22:33 UTC
Description:
External data links confirmation dialog shows URI encoded document path with %20 instead of  whitespaces.

Steps to Reproduce:
1. Open a file containing any whitespaces including links to an external datasource
2. Check the confirmation dialog

In order to repdrocude open the files from bug report 146532.

Actual Results:
The confirmation dialog shows: The document LO%20W-C%20odtsample%20.odt contains one or more links to external data.

Expected Results:
The document LO W-C odtsample.odt contains one or more links to external data.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a456d84b324db16ce81df5419c5335fbfae4956b
CPU threads: 32; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Vulkan; VCL: win
Locale: de-DE (de_DE); UI: en-US
Calc: CL threaded
Comment 1 m_a_riosv 2025-08-24 21:47:33 UTC
Created attachment 202494 [details]
Screenshot

I think I can't reproduce:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7f4868348c14b305fcd75744e1e3544d0d3a5d61
CPU threads: 16; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Andreas Heinisch 2025-08-25 05:48:31 UTC
Download both documents from 146532 and just open the odt. Even before the document shows up, there should be a confirmation dialog.
Comment 3 Robert Großkopf 2025-08-25 08:38:52 UTC
Could confirm the buggy behavior in the dialog, which appears when opening the *.odt document of the example file.

Version: 25.8.0.4 (X86_64)
Build ID: 48f00303701489684e67c38c28aff00cd5929e67
CPU threads: 6; OS: Linux 6.4; UI render: default; VCL: kf5 (cairo+xcb)
Locale: de-DE (de_DE.UTF-8); UI: de-DE
Calc: threaded
Comment 4 Commit Notification 2025-08-26 13:07:29 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7039f8acee67cbf20a4ca2b11e8bec5ac8a94414

tdf#168089 - Don't URL encode filename for the update links confirmation dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-08-26 19:04:29 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0d9b65eed8f518af5108f2587c2b237af9463622

tdf#168089 - Don't URL encode filename for the update links confirmation dialog

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-09-01 11:23:47 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/16fa8cd1167770f539b112ec2c75caacd1228c47

tdf#168089 - Don't URL encode filename for the update links confirmation dialog

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.