tdf#168089 - Don't URL encode filename for the update links confirmation dialog

Change-Id: I9f3b6b7ae342e64c60ee9bf635cd64d7eb32b226
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190132
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>